Clean initial upload (no secrets, no large files)

--- a/static/index.html
+++ b/static/index.html
@@ -26,6 +26,7 @@
       padding: 15px;
       background: #f1f5f9;
       border-radius: 8px;
+      min-height: 80px;
     }
     button {
       background: #4CAF50;
@@ -94,3 +95,4 @@
   </script>
 </body>
 </html>
+
